k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: recipe-manager
  labels:
    app.kubernetes.io/name: recipe-manager
    app.kubernetes.io/part-of: recipe-manager-app
