k8s/backend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-manager-backend
  namespace: recipe-manager
  labels:
    app.kubernetes.io/name: recipe-manager-backend
    app.kubernetes.io/component: backend
    app.kubernetes.io/part-of: recipe-manager-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: recipe-manager-backend
      app.kubernetes.io/component: backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: recipe-manager-backend
        app.kubernetes.io/component: backend
        app.kubernetes.io/part-of: recipe-manager-app
    spec:
      containers:
        - name: backend
          image: milajovanoska/recipe-manager-backend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            httpGet:
              path: /api/recipes
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 20
          resources:
            requests:
              cpu: 250m
              memory: 512Mi
            limits:
              cpu: 500m
              memory: 1Gi
