k8s/frontend-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recipe-manager-frontend
  namespace: recipe-manager
  labels:
    app.kubernetes.io/name: recipe-manager-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: recipe-manager-app
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: recipe-manager-frontend
      app.kubernetes.io/component: frontend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: recipe-manager-frontend
        app.kubernetes.io/component: frontend
        app.kubernetes.io/part-of: recipe-manager-app
    spec:
      containers:
        - name: frontend
          image: milajovanoska/recipe-manager-frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          volumeMounts:
            - name: frontend-nginx-config
              mountPath: /etc/nginx/conf.d/default.conf
              subPath: default.conf
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
            failureThreshold: 6
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 250m
              memory: 256Mi
      volumes:
        - name: frontend-nginx-config
          configMap:
            name: frontend-configmap
            items:
              - key: default.conf
                path: default.conf
