k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: recipe-manager-frontend
  namespace: recipe-manager
  labels:
    app.kubernetes.io/name: recipe-manager-frontend
    app.kubernetes.io/component: frontend
    app.kubernetes.io/part-of: recipe-manager-app
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: recipe-manager-frontend
    app.kubernetes.io/component: frontend
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
