k8s/postgres-service.yml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: recipe-manager
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
    app.kubernetes.io/part-of: recipe-manager-app
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
  ports:
    - name: postgres
      port: 5432
      targetPort: 5432
